# EpiGraph-cpp

./: .gitignore  .gitmodules  22742_output.csv  2274_output.csv  643_output.csv  984_output.csv  CMakeLists.txt  LICENSE  R0.csv  README.md  SIRX_ed.cpp  SIRX_ireland.cpp  agg_output.csv  algos.h  config.toml  distributions.h  edge.h  graph.cpp  graph.h  meta_pop_network.h  network_builder.h  op_to_gif.py  sixrd_ed_soa.cpp  sixrd_model.h  spatial_graph.h  spatial_meta_sirx.h  spatial_utils.h  travel_model.h
EpiGraph/: EpiGraph.cpp  EpiGraph.hpp
EpiGraph/Core/: EpiComp.hpp  IO.hpp  NetEpiComp.cpp  NetEpiComp.hpp  NetEpiCompBase.hpp  NetMetaPop.hpp  Util.hpp
EpiGraph/Eigen/: EigenUtil.hpp  SpectralProperties.hpp
EpiGraph/EigenUtil/: .IO.hpp.un~  .Spectral.hpp.un~  Accumulate.hpp  IO.hpp  IO.hpp~  LinAlg.hpp  Spectral.hpp  Spectral.hpp~  StaticAsserts.hpp
EpiGraph/Graph/: BFS.cpp  BFS.hpp  Components.hpp  Degree.hpp
EpiGraph/Models/: .SIXRD.hpp.un~  .SIXRDNetMetaPop.hpp.un~  CovidSim.hpp  SI.hpp  SIR.hpp  SIXRD.hpp  SIXRD.hpp~  SIXRDNetMetaPop.hpp  SIXRDNetMetaPop.hpp~
EpiGraph/Random/: Distributions.cpp  Distributions.hpp  RandomMatrix.hpp
EpiGraph/Spatial/: SpatialUtil.cpp  SpatialUtil.hpp  TravelStrategies.hpp
Examples/: CMakeLists.txt  connected_component.cpp  degree.cpp  si.cpp  sir.cpp
data/: ed_pop_data.csv  pop_data.csv
data/output/: MinImpactLDZones.csv
data/processed/: ed_commuter_probs.csv  ed_distance_probs.csv  ed_edges.csv  ed_soa_county.csv  ed_soa_long_lat.csv  ed_soa_population.csv  ed_soa_vertices.csv  ed_vertices.csv
data/raw/: ED_Distance_vs_Commuters_vs_Num_Links.csv  Geographic Data (statistical geographies).ods  (+2 more)
data_processing/: .gen_network_data.py.un~  12_mar_01_dec_hist.csv  12_mar_01_dec_hist_proj_after.csv  MinImpactLDZones_timeseries.py  R0.py  SIXRD_test.ipynb  agg_timeseries_plot.py  counties_timeseries.py  county_lockdown_1400_I.csv  county_lockdown_200_I.csv  county_lockdown_comp_100.csv  county_lockdown_comp_70.csv  county_lockdown_comp_80.csv  county_lockdown_comp_90.csv  county_lockdown_comp_95.csv  county_lockdown_comp_99.csv  county_lockdown_comp_cork.csv  county_lockdown_comp_dublin.csv  create_gif.py  ed_network.py  ed_soa_data.ipynb  ed_soa_gif.py  ed_soa_link_data.ipynb  ed_soa_network.py  fig12.py  fig14.py  fig16.py  fig17.py  fig2.py  fig3.py  fig4_fig10_fig15.py  fig5.py  fig6.py  fig7_fig8.py  fig9_fig11.py  gen_network_data.py  gen_network_data.py~  model_gif.py  model_timeseries.py  mult_ts.py  (+16 more)
epigraph/: EigenUtil.hpp  IO.hpp  RandomMatrix.hpp  SixrdOde.hpp  SpatialUtil.cpp  SpatialUtil.hpp  distributions.h  dyn_county_lockdown.cpp  dyn_lockdown.cpp  eigen_util.h  eigen_util.hpp  epigraph.cpp  epigraph.hpp  io.h  multi_phase_lockdown.cpp  random_matrix.h  random_matrix.hpp  sixrd_model.cpp  sixrd_net_model.cpp  sixrd_net_model.hpp  sixrd_net_model_up.cpp  sixrd_net_model_up.hpp  sixrd_odes.h  sixrd_odes.hpp
include/: distributions.h  edge.h  eigen_util.h  io.h  meta_pop_network.h  sixrd_model.h  spatial_util.h  spatial_utils.h  travel_model.h
output/: 0.csv  1.csv  10.csv  100.csv  1000.csv  1001.csv  1002.csv  1003.csv  1004.csv  1005.csv  1006.csv  1007.csv  1008.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  (+969 more)
simulations/: .CMakeLists.txt.un~  .CountryLockDown.cpp.un~  .CountyLockDown.cpp.un~  .Test.cpp.un~  CMakeLists.txt  CMakeLists.txt~  CountryLockDown.cpp  CountryLockDown.cpp~  CountyLockDown.cpp  CountyLockDown.cpp~  CovidSim_test.cpp  MinImpactLDZones.cpp  Test.cpp  Test.cpp~  dyn_county_lockdown.cpp  dyn_lockdown.cpp  multi_phase_lockdown.cpp
src/: county_dyn_lockdown.cpp  distributions.cpp  dyn_county_lockdown.cpp  dyn_lockdown.cpp  multi_phase.cpp  multi_phase_lockdown.cpp  sixrd_ed_soa.cpp  vertex_dyn_lockdown.cpp
(+853 files in other folders)
